# airflow

./: pyproject.toml  requirements.txt
dags/: dependency.py  dynamic.py  personalize_newsletter.py  raw_zen_quotes.py
include/: locations.json
include/newsletter/: 2026-03-07_newsletter.txt  2026-03-07_newsletter_userid_2319.txt  2026-03-08_newsletter.txt  2026-03-08_newsletter_userid_2319.txt  2026-03-09_newsletter.txt  2026-03-09_newsletter_userid_2319.txt  2026-03-10_newsletter.txt  2026-03-10_newsletter_userid_2319.txt  newsletter_template.txt
include/user_data/: user_1.json
